Namespace scrapers by module name

--- a/config.json
+++ b/config.json
@@ -416,6 +416,7 @@
     }
   },
   "manual": {
+    "enabled": true,
     "sheet_id": "1nrIMkkumTVb8QGRPtauGWXU6USy42ZTw6GmezGjaDa0",
     "page_number": 2,
     "column_names": {
