--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ trouver_les_rdv:
   script:
     - ./scripts/scrape
     - make stats
+    - cp data/output/stats*.json data/output/departements.json data/output/v2/  # Temporary to have double run v1/v2
   artifacts:
     name: "rdv"
     paths:
