--- a/config.json
+++ b/config.json
@@ -184,7 +184,7 @@
       }
     },
     "keldoc": {
-      "enabled": false,
+      "enabled": true,
       "timeout": 10,
       "recognized_urls": [
         "https://vaccination-covid.keldoc.com",
