--- a/config.json
+++ b/config.json
@@ -364,11 +364,8 @@
       "patient_url": "https://patient.avecmondoc.com/fiche/structure/{slug}",
       "search_tries": 2,
       "api": {
-        "search": "https://api.avecmondoc.com/api/Doctors/search",
-        "search_filter": {
-          "params": "{\"city\": null, \"gps\": null, \"dateBefore\": null}", 
-          "options": "{\"limit\": 1000, \"page\": 1, \"distance\": null}"
-        },
+        "search": "https://api.avecmondoc.com/api/Organizations/public/covid",
+        "search_page_size": 10,
         "get_doctor_slug": "https://api.avecmondoc.com/api/Doctors/slug/{slug}",
         "get_organization_slug": "https://api.avecmondoc.com/api/Organizations/slug/{slug}",
         "get_by_organization": "https://api.avecmondoc.com/api/Doctors/getByOrganization/{id}",
