[Centres réservés] - Modification des mots clés
J'ai fait quelques tests suite à l'ouverture de #551, et cette combinaison de mots clés est la plus pertinente !

--- a/config.json
+++ b/config.json
@@ -68,9 +68,10 @@
     "maiia"
   ],
   "reserved_centers": [
-    "réservé",
-    "reserve",
-    "professionnel"
+    "professions prioritaires",
+    "professionnels de santé",
+    "professionnels prioritaires",
+    "personnels prioritaires"
   ],
   "platforms": {
     "doctolib": {
