REVERT Changement mots clés centre réservé
Les tests unitaires plantent

--- a/config.json
+++ b/config.json
@@ -68,10 +68,9 @@
     "maiia"
   ],
   "reserved_centers": [
-    "professions prioritaires",
-    "professionnels de santé",
-    "professionnels prioritaires",
-    "personnels prioritaires"
+    "réservé",
+    "reserve",
+    "professionnel"
   ],
   "platforms": {
     "doctolib": {
