correction filtre injection unique et rework pid

--- a/config.json
+++ b/config.json
@@ -103,7 +103,8 @@
           "1ère injection",
           "1re injection",
           "vaccination",
-          "Vaccin COVID-19"
+          "Vaccin COVID-19",
+          "injection unique"
         ],
         "appointment_category": [
           "18 à 54",
