[Doctolib] - Ajout de quelques appointment_category dans config.json
Certains nouvelles catégories de motifs viennent d'apparaitre sur doctolib.

--- a/config.json
+++ b/config.json
@@ -113,6 +113,8 @@
           "50 ans",
           "18 ans",
           "16 ans",
+          "majeur",
+          "mineur",
           "eligibles",
           "éligibles",
           "astra Zeneca",
