[Blocklist Manager] - playing with user input

--- a/.github/workflows/blocklist_manager.yml
+++ b/.github/workflows/blocklist_manager.yml
@@ -1,6 +1,12 @@
 ---
 name: Blocklist Manager
 
+inputs:
+  url_to_delete:
+    description: 'url_to_delete'
+    required: true
+    
+    
 on:
   schedule:
     - cron: "0 * * * *"
