--- a/.github/workflows/blocklist_manager.yml
+++ b/.github/workflows/blocklist_manager.yml
@@ -2,17 +2,15 @@
 name: Blocklist Manager
 
 on:
-  schedule:
-    - cron: "0 * * * *"
-  # Allow running manually
   workflow_dispatch:
     inputs:
       url_to_delete:
-        description: 'url_to_delete'
+        description: "Lien de l'URL à bloquer"
         required: true
-    
-    
-
+      delete_reason:
+        description: "Raison du blocage (facultatif)"
+      git_issue:
+        description: "Lien de l'issue Git correspondante (facultatif)"
 jobs:
 
   scrape:
