--- a/.github/workflows/blocklist_manager.yml
+++ b/.github/workflows/blocklist_manager.yml
@@ -1,6 +1,9 @@
 ---
 name: Blocklist Manager
-
+env:
+  INPUT_URL_TO_DELETE: ${{ inputs.url_to_delete }}
+  INPUT_GIT_ISSUE: ${{ inputs.git_issue }}
+  INPUT_DELETE_REASON: ${{ inputs.delete_reason }}
 on:
   workflow_dispatch:
     inputs:
