--- a/.github/workflows/blocklist_manager.yml
+++ b/.github/workflows/blocklist_manager.yml
@@ -28,9 +28,9 @@ jobs:
       - name: "Blocklist Manager..."
         run: make blocklistmanager
         env:
-          INPUT_URL_TO_DELETE: ${{ inputs.url_to_delete }}
-          INPUT_GIT_ISSUE: ${{ inputs.git_issue }}
-          INPUT_DELETE_REASON: ${{ inputs.delete_reason }}
+          INPUT_URL_TO_DELETE: ${{ github.event.inputs.url_to_delete }}
+          INPUT_GIT_ISSUE: ${{ github.event.inputs.git_issue }}
+          INPUT_DELETE_REASON: ${{ github.event.inputs.delete_reason }}
       - name: "Copy output file"
         run: cp data/input/centers_blocklist.json .
       - name: "Get folder from data-auto"
