Blocklist manager yml - Correcting a mistake

--- a/.github/workflows/blocklist_manager.yml
+++ b/.github/workflows/blocklist_manager.yml
@@ -3,7 +3,8 @@ name: Blocklist Manager
 
 on:    
   repository_dispatch:
-    types:[webhook]
+    types:
+      - webhook
   workflow_dispatch:
     inputs:
       name_to_delete:
