Add additional reasons

--- a/config.json
+++ b/config.json
@@ -400,13 +400,16 @@
       },
       "filters": {
         "valid_reasons": [
-          "Premiere injection COVID 19",
-          "Première injection vaccinale COVID-19",
-          "Rendez-vous de première vaccination Covid-19",
+          "Premiere injection COVID",
+          "Première injection COVID",
+          "Permière injection COVID",
+          "Première injection vaccinale COVID",
+          "Rendez-vous de première vaccination Covid",
           "1ere vaccination astra",
           "Injection vaccinale COVID-19 - Janssen",
           "Injection monodose Janssen",
-          "Injection vaccinale monodose Janssen"
+          "Injection vaccinale monodose Janssen",
+          "Vaccination covid 19 janssen"
         ]
       },
       "center_scraper": {
