reparation iterateur par creneau

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
-{
+{ "scrape_par_creneaux" : true,
   "data-auto": {
     "base_url": "https://raw.githubusercontent.com/CovidTrackerFr/vitemadose/data-auto/"
   },
