Ajouts de motifs KELDOC

--- a/config.json
+++ b/config.json
@@ -220,7 +220,7 @@
         "appointment_skill": [
           "Centre de vaccination COVID-19"
         ],
-        "appointment_reason": [
+         "appointment_reason": [
           "1 er inj",
           "1 ere inj",
           "1 ère inj",
@@ -235,7 +235,15 @@
           "1 injection",
           "première dose",
           "1° injection",
-          "première injection"
+          "première injection",
+          "mono-injection",
+          "mono injection",
+          "mono-dose",
+          "mono dose",
+          "injection unique",
+          "première injection",
+          "première dose"
+
         ]
       },
       "center_scraper": {
