Desactive les tests en scrape régulier

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,8 @@ test:
     - ./scripts/install
   script:
     - ./scripts/test
-  except:
-    - schedules
+  only:
+    - branches
 
 lister_contributeurs:
   stage: scrape
