desactive _vraiment_ les tests lors des triggers

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,9 @@ test:
     - ./scripts/test
   only:
     - branches
+  except:
+    - schedules
+    - triggers
 
 lister_contributeurs:
   stage: scrape
