--- a/config.json
+++ b/config.json
@@ -243,7 +243,7 @@
           "mono dose",
           "injection unique",
           "première injection",
-          "première dose"
+          "vaccination ouverte"
 
         ]
       },
