Revert "[Creneaux] - ATTENTION MEGA MISE EN PROD"

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,4 +5,5 @@ addopts = scraper/ tests/ --doctest-modules
 omit = venv/*
        scraper/profiler.py
        # not used for now
+       scraper/export/export_pool.py
 include = scraper/*, tests/*
