--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,8 +53,7 @@ trouver_les_rdv:
     - curl --silent --fail --head https://partners.doctolib.fr/
   script:
     - ./scripts/scrape
-    - make stats
-    - cp data/output/stats*.json data/output/departements.json data/output/v2/  # Temporary to have double run v1/v2
+    - cp data/output/departements.json data/output/  # Temporary to have double run v1/v2
   artifacts:
     name: "rdv"
     paths:
