--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ trouver_les_rdv:
   script:
     - ./scripts/scrape
     - make stats
-    - cp data/output/stats*.json data/output/departements.json data/output/v2/  # Temporary to have double run v1/v2
+    - cp data/output/stats*.json data/output/departements.json 
   artifacts:
     name: "rdv"
     paths:
