--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 { "scrape_par_creneaux" : true, 
+  "scrape_on_n_days" : 28,
   "data-auto": {
     "base_url": "https://raw.githubusercontent.com/CovidTrackerFr/vitemadose/data-auto/"
   },
