[Keldoc] - Ajout motifs 153 et 47

--- a/config.json
+++ b/config.json
@@ -218,7 +218,7 @@
           "Maladies infectieuses",
           "COVID19 - Vaccination"
         ],
-        "vaccination_speciality_ids":["144","496"],
+        "vaccination_speciality_ids":["144","496","153","47"],
         "appointment_skill": [
           "Centre de vaccination COVID-19"
         ],
