[Keldoc] - Ajout motifs "infectiologue" et "infirmier"

--- a/config.json
+++ b/config.json
@@ -212,7 +212,9 @@
         "appointment_speciality_urls": [
           "maladies-infectieuses",
           "vaccination-covid-19",
-          "vaccination-covid19"
+          "vaccination-covid19",
+          "infectiologue",
+          "infirmier"
         ],
         "appointment_speciality": [
           "Maladies infectieuses",
