[Scraper] - Re enabling keldoc after correcting breaker time

--- a/config.json
+++ b/config.json
@@ -189,7 +189,7 @@
       }
     },
     "keldoc": {
-      "enabled": false,
+      "enabled": true,
       "timeout": 40,
       "recognized_urls": [
         "https://vaccination-covid.keldoc.com",
