[Scraper] - Disabling Keldoc
Gros soucis avec keldoc (voir sorties du keldoc center scrap) 

Désactivation temporaire en attendant de debug

--- a/config.json
+++ b/config.json
@@ -189,7 +189,7 @@
       }
     },
     "keldoc": {
-      "enabled": true,
+      "enabled": false,
       "timeout": 40,
       "recognized_urls": [
         "https://vaccination-covid.keldoc.com",
