--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -34,7 +34,7 @@ jobs:
 
       name: "Push On Gitlab"
       runs-on: "ubuntu-20.04"
- 
+      needs: test
       steps:
         - uses: "actions/checkout@v2"
           with:
