--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
   },
   "outputs": {
     "stats": {
-      "data-auto": "https://vitemadose.gitlab.io/vitemadose/",
+      "data-auto": "toto.fr",
       "chronodoses": "data/output/stats_chronodoses.json",
       "by_date": "stats_by_date.json",
       "by_date_dep": "stats_by_date_dep.json",
