--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
-{ "scrape_par_creneaux" : true, 
-  "scrape_on_n_days" : 28,
+{ "scrape_on_n_days" : 28,
   "data-auto": {
     "base_url": "https://raw.githubusercontent.com/CovidTrackerFr/vitemadose/data-auto/"
   },
@@ -27,10 +26,6 @@
     },
     "last_scans": "data/output/info_centres.json",
     "data_gouv" : "data/output/centres_open_data.json"
-  },
-  "scrape": {
-    "pool_size": 50,
-    "blocked_calls_threshold": 10
   },
   "vaccines": {
     "Pfizer-BioNTech": ["pfizer", "biontech"],
@@ -65,10 +60,6 @@
     ],
     "interval": 2
   },
-  "excluded_gouv_platforms": [
-    "doctolib",
-    "maiia"
-  ],
   "reserved_centers": [
     "professions prioritaires",
     "professionnels de santé",
