[Tests] - Setting some steps as optional

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,15 @@ jobs:
         run: scripts/test
       - name: "List all contributors"
         run: scripts/contributors
+        continue-on-error: true 
       - name: "Install coverage badge"
         run: pip install pytest coverage coverage-badge
+        continue-on-error: true 
       - name: "Generate coverage badge"
         run: coverage-badge
+        continue-on-error: true 
       - name: "Upload coverage to Codecov"
+        continue-on-error: true 
         uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: true
