--- a/.github/workflows/doctolib_center_scrap.yml
+++ b/.github/workflows/doctolib_center_scrap.yml
@@ -52,7 +52,8 @@ jobs:
           git clone --branch data-auto https://github.com/CovidTrackerFr/vitemadose.git tmp/
           cp -R tmp/data/output/* data/output
           rm -rf tmp/
-          cp doctolib-centers.json data/output
+          cp doctolib-centers.json doctolib_center_list.json
+          cp doctolib-centers.json doctolib_center_list.json data/output
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Updated Doctolib centers
