[Gitlab runner conf] - Switching log to UTF8

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ trouver_les_rdv:
   tags:
     - ovh
   before_script:
+    - CHCP 65001
     - apk add --no-cache make curl
     - ./scripts/install
     - echo IP publique de sortie du gitlab runner $(curl -s https://ifconfig.me/ip )
