--- a/config.json
+++ b/config.json
@@ -188,7 +188,7 @@
             }
         },
         "keldoc": {
-            "enabled": true,
+            "enabled": false,
             "timeout": 20,
             "recognized_urls": [
                 "https://vaccination-covid.keldoc.com",
