logging centres lents

--- a/config.json
+++ b/config.json
@@ -78,7 +78,7 @@
     ],
     "platforms": {
         "doctolib": {
-            "enabled": false,
+            "enabled": true,
             "timeout": 5,
             "recognized_urls": [
                 "https://partners.doctolib.fr",
